plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '5.2.0'
}

sourceCompatibility = 17
targetCompatibility = 17

group 'com.dynxsty.dsbmobilebot'

repositories {
    mavenCentral()
    maven { url 'https://m2.dv8tion.net/releases' }
    maven { url 'https://jitpack.io' }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation 'net.dv8tion:JDA:5.0.0-alpha.5'
    implementation 'de.sematre.dsbmobile:DSBmobile-API:1.8'
    implementation 'org.yaml:snakeyaml:1.29'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.10'

    compileOnly 'org.projectlombok:lombok:1.18.20'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'
    testCompileOnly 'org.projectlombok:lombok:1.18.20'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
}

jar{
    manifest{ attributes("Manifest-Version": "1.0", "Main-Class": "com.dynxsty.dsbmobilebot.Bot") }
}

java{
    toolchain{
        sourceCompatibility(sourceCompatibility as JavaVersion)
        targetCompatibility(targetCompatibility as JavaVersion)
    }
}

tasks.withType(JavaCompile){ options.encoding = 'UTF-8'}
tasks.withType( JavaCompile ).configureEach {
    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
}
test { useJUnitPlatform() }